--- a/Technicals/pom.xml
+++ b/Technicals/pom.xml
@@ -13,8 +13,8 @@
     <artifactId>Technicals</artifactId>
 
     <properties>
-        <maven.compiler.source>19</maven.compiler.source>
-        <maven.compiler.target>19</maven.compiler.target>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
@@ -26,10 +26,8 @@
             <version>0.15</version>
         </dependency>
         <dependency>
-            <groupId>com.vish.fno.reader</groupId>
-            <artifactId>KiteReader</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
-            <scope>compile</scope>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-json</artifactId>
         </dependency>
     </dependencies>
 
