--- a/OrderManager/src/main/resources/application.yml
+++ b/OrderManager/src/main/resources/application.yml
@@ -1,14 +1,25 @@
 spring:
-    mvc:
-        pathmatch:
-            matching-strategy: ant_path_matcher
-    main:
-        banner-mode: off
-    data:
-        mongodb:
-            host: localhost
-            port: 27017
-            database: fno
+    mvc.pathmatch.matching-strategy: ant_path_matcher
+    view:
+        prefix: /static/
+        suffix: .html
+    main.banner-mode: off
+    data.mongodb:
+        host: localhost
+        port: 27017
+        database: fno
+
+springdoc:
+    swagger-ui:
+        path: /swagger
+
+server:
+    port: 8080
+    ssl:
+        enabled: true
+        key-store-password:
+        key-store:
+        key-store-type:
 
 logging:
     level:
@@ -30,7 +41,7 @@ logging:
 
 # configs for actuator endpoints
 management:
-    server.port: 8081
+    server.port: 8080
     endpoint:
         info.cache.time-to-live: 5s
         health:
@@ -39,18 +50,11 @@ management:
         metrics.enabled: true
         prometheus.enabled: true
     endpoints.web:
-            exposure.include: health,info,logfile,metrics,loggers
-            base-path: /actuator
+        exposure.include: "*"
+        base-path: /actuator
     prometheus.metrics.export:
-                enabled: true
-                step: 30s
-server:
-    port: 8080
-    ssl:
         enabled: true
-        key-store-password:
-        key-store:
-        key-store-type: PKCS12
+        step: 30s
 
 kite:
     baseuri: https://kite.trade
@@ -59,7 +63,7 @@ kite:
     apiSecret:
     liveData:
     authenticationUrl: ${kite.baseuri}/connect/login?api_key=${kite.apiKey}&v=3
-    serviceInCloud:
+    serviceInCloud: false
 
 order:
     symbolsPath: ind_nifty100list.csv
@@ -74,5 +78,3 @@ order:
     maximumBuyPrice: 500
     minimumBuyPrice: 225
     slmDeltaPrice: 4
-
-
