--- a/OrderManager/pom.xml
+++ b/OrderManager/pom.xml
@@ -136,5 +136,6 @@
                 </executions>
             </plugin>
         </plugins>
+        <finalName>order-manager</finalName>
     </build>
 </project>
