--- a/Utils/pom.xml
+++ b/Utils/pom.xml
@@ -9,6 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
+    <groupId>com.vish.fno.util</groupId>
     <artifactId>Utils</artifactId>
 
     <properties>
@@ -16,5 +17,6 @@
         <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+
 
 </project>
