--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <module>OrderManager</module>
 		<module>Technicals</module>
         <module>Models</module>
+        <module>Utils</module>
     </modules>
 
 	<groupId>com.vish.fno</groupId>
@@ -26,6 +27,7 @@
 	<properties>
 		<java.version>17</java.version>
 		<pmd.version>6.37.0</pmd.version>
+		<pmdRulesetPath>${project.basedir}/../ruleset/pmd-custom-ruleset.xml</pmdRulesetPath>
 	</properties>
 
 	<dependencies>
@@ -90,6 +92,9 @@
 				<version>3.15.0</version>
 				<configuration>
 					<linkXRef>false</linkXRef>
+					<rulesets>
+						<ruleset>${pmdRulesetPath}</ruleset>
+					</rulesets>
 				</configuration>
 				<executions>
 					<execution>
