--- a/Models/pom.xml
+++ b/Models/pom.xml
@@ -7,9 +7,11 @@
         <groupId>com.vish.fno</groupId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
-    <modelVersion>4.0.0</modelVersion>
 
+    <modelVersion>4.0.0</modelVersion>
+    <groupId>com.vish.fno.model</groupId>
     <artifactId>Models</artifactId>
+
     <dependencies>
         <dependency>
             <groupId>com.vish.fno.reader</groupId>
@@ -32,5 +34,4 @@
         <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
-
 </project>
