--- a/KiteReader/pom.xml
+++ b/KiteReader/pom.xml
@@ -36,10 +36,9 @@
             <version>20230227</version>
         </dependency>
         <dependency>
-            <groupId>com.vish.fno.util</groupId>
-            <artifactId>Utils</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
-            <scope>compile</scope>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.14.0-rc1</version>
         </dependency>
     </dependencies>
 </project>
