--- a/Technicals/pom.xml
+++ b/Technicals/pom.xml
@@ -30,6 +30,12 @@
             <scope>compile</scope>
         </dependency>
         <dependency>
+            <groupId>com.vish.fno.util</groupId>
+            <artifactId>Utils</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-math3</artifactId>
             <version>3.6.1</version>
