--- a/OrderManager/pom.xml
+++ b/OrderManager/pom.xml
@@ -18,7 +18,48 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <node.version>v18.15.0</node.version>
         <npm.version>9.6.4</npm.version>
+        <order.alalyzer.library.version>0.0.1-SNAPSHOT</order.alalyzer.library.version>
     </properties>
+
+    <dependencyManagement>
+       <dependencies>
+           <dependency>
+               <groupId>org.springdoc</groupId>
+               <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+               <version>2.1.0</version>
+           </dependency>
+           <dependency>
+               <groupId>javax.annotation</groupId>
+               <artifactId>javax.annotation-api</artifactId>
+               <version>1.3.2</version>
+           </dependency>
+           <dependency>
+               <groupId>com.vish.fno.reader</groupId>
+               <artifactId>KiteReader</artifactId>
+               <version>${order.alalyzer.library.version}</version>
+           </dependency>
+           <dependency>
+               <groupId>com.vish.fno.model</groupId>
+               <artifactId>Models</artifactId>
+               <version>${order.alalyzer.library.version}</version>
+           </dependency>
+           <dependency>
+               <groupId>com.vish.fno.technical</groupId>
+               <artifactId>Technicals</artifactId>
+               <version>${order.alalyzer.library.version}</version>
+           </dependency>
+           <dependency>
+               <groupId>com.vish.fno.util</groupId>
+               <artifactId>Utils</artifactId>
+               <version>${order.alalyzer.library.version}</version>
+           </dependency>
+           <dependency>
+               <groupId>com.google.guava</groupId>
+               <artifactId>guava</artifactId>
+               <version>32.0.0-android</version>
+           </dependency>
+       </dependencies>
+    </dependencyManagement>
 
     <dependencies>
         <dependency>
@@ -32,7 +73,6 @@
         <dependency>
             <groupId>org.springdoc</groupId>
             <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
-            <version>2.1.0</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -41,36 +81,30 @@
         <dependency>
             <groupId>javax.annotation</groupId>
             <artifactId>javax.annotation-api</artifactId>
-            <version>1.3.2</version>
         </dependency>
         <dependency>
             <groupId>com.vish.fno.reader</groupId>
             <artifactId>KiteReader</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>com.vish.fno.model</groupId>
             <artifactId>Models</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>com.vish.fno.technical</groupId>
             <artifactId>Technicals</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>com.vish.fno.util</groupId>
             <artifactId>Utils</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
-            <version>32.0.0-android</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
