--- a/KiteReader/pom.xml
+++ b/KiteReader/pom.xml
@@ -36,6 +36,11 @@
             <version>20230227</version>
         </dependency>
         <dependency>
+            <groupId>com.vish.fno.util</groupId>
+            <artifactId>Utils</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+        <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
             <version>2.14.0-rc1</version>
