--- a/OrderManager/src/test/resources/application-test.yml
+++ b/OrderManager/src/test/resources/application-test.yml
@@ -28,7 +28,7 @@ order:
     slmDeltaPrice: 10
 
 strategies:
-    list:
+    indexStrategyList:
         - strategyName: Hammer
           index: NIFTY 50
           enabled: false
