--- a/Technicals/pom.xml
+++ b/Technicals/pom.xml
@@ -9,7 +9,7 @@
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
-    <groupId>com.vish.fno.technical</groupId>
+    <groupId>com.vish.fno</groupId>
     <artifactId>Technicals</artifactId>
 
     <properties>
@@ -24,13 +24,13 @@
             <artifactId>spring-boot-starter-json</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.vish.fno.model</groupId>
+            <groupId>com.vish.fno</groupId>
             <artifactId>Models</artifactId>
             <version>0.0.1-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
-            <groupId>com.vish.fno.util</groupId>
+            <groupId>com.vish.fno</groupId>
             <artifactId>Utils</artifactId>
             <version>0.0.1-SNAPSHOT</version>
             <scope>compile</scope>
